# perfect_select

./: CMakeLists.txt  README.md
.github/: FUNDING.yml
backend/: bl_integration.h  module.cpp  module.h  select.cpp  select.h
perfect_select/: __init__.py  math_utils.py  operators.py  previews.py  properties.py  user_interface.py
scripts/: __init__.py  operators.py  previews.py  properties.py  user_interface.py  utils.py
scripts/backend/: __init__.py  select.py  utils.py
shaders/: 2D_line_dashed.frag  2D_line_dashed.vert  preview.frag  preview.vert
